--- a/src/main/resources/static/css/signUp.css
+++ b/src/main/resources/static/css/signUp.css
@@ -24,11 +24,17 @@ html,body{
     visibility: hidden;
 }
 .logo_box{
-    width: 500px;
-    height: 420px;
+    width: 490px;
+    height: 590px;
     background: #fff;
     border-radius: 10px;
     float: left;
-    margin-left:6%;
-    margin-top:10%;
+    margin-left:16%;
+    margin-top:4%;
+    padding-top: 20px;
+}
+.box-title{
+    font-size: 22px;
+    margin-bottom: 20px;
+    margin-left: 37%;
 }
