--- a/src/main/resources/static/css/city-picker.css
+++ b/src/main/resources/static/css/city-picker.css
@@ -27,7 +27,7 @@
     width: 10px;
     margin-top: -3px;
     height: 5px;
-    background: url(../images/drop-arrow.png) -10px -25px no-repeat;
+    /*background: url(../images/drop-arrow.png) -10px -25px no-repeat;*/
 }
 
 .city-picker-span.focus,
