--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -311,7 +311,7 @@ h3.logo a.navbar-brand i {
     text-align: center;
 }
 .top-forms {
-    text-align: left;
+    text-align: right;
 }
 /*-- //header --*/
 
